--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "@babylonjs/core": "^7.13.1",
+    "@babylonjs/gui": "^7.14.0",
     "@babylonjs/havok": "^1.3.7",
     "@babylonjs/inspector": "^7.13.1",
     "@babylonjs/loaders": "^7.13.1"
